composer component install

--- a/templates/doctrine/index.html.twig
+++ b/templates/doctrine/index.html.twig
@@ -14,7 +14,7 @@
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code><a href="{{ '/var/www/src/Controller/DoctrineController.php'|file_link(0) }}">src/Controller/DoctrineController.php</a></code></li>
-        <li>Your admin at <code><a href="{{ '/public/phpliteadmin.php' }}" target="_blank">/public/phpliteadmin.php</a></code></li>
+        <li>Your admin at <code><a href="{{ '/phpliteadmin.php' }}" target="_blank">/phpliteadmin.php</a></code></li>
     </ul>
 </div>
 {% endblock %}
