--- a/templates/all/index.html.twig
+++ b/templates/all/index.html.twig
@@ -1,4 +1,6 @@
 {% extends 'layout.html.twig' %}
+{% set myvar = "<div>it's a good day today</div>" %}
+{% set myvar2 = "<div>exact</div>" %}
 
 {% block title %}Hello {{ controller_name }}!{% endblock %}
 
