--- a/templates/misc/index.html.twig
+++ b/templates/misc/index.html.twig
@@ -4,6 +4,14 @@
 
     {{ parent() }}
 
+    {% if myvar is defined %}
+        <p>
+            1.{{ myvar|raw~myvar2 }}-
+            2.{{ myvar|raw|upper }}-
+            3.{{ myvar|upper|raw }}- {# raw: need to be the last one to not escaping values #}
+        </p>
+    {% endif %}
+
     <p>
         Route: {{ app.request.attributes.get('_route') }}
     </p>
