--- a/templates/doctrine/index.html.twig
+++ b/templates/doctrine/index.html.twig
@@ -2,13 +2,8 @@
 
 {% block title %}Hello {{ controller_name }}Controller!{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block wrapper %}
 
-<div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
     This friendly message is coming from:
@@ -16,5 +11,5 @@
         <li>Your controller at <code><a href="{{ '/var/www/src/Controller/DoctrineController.php'|file_link(0) }}">src/Controller/{{ controller_name }}Controller.php</a></code></li>    
         <li>Your admin at <code><a href="{{ '/phpliteadmin.php' }}" target="_blank">/phpliteadmin.php</a></code></li>
     </ul>
-</div>
+
 {% endblock %}
