--- a/templates/menu/knp_menu.html.twig
+++ b/templates/menu/knp_menu.html.twig
@@ -1,5 +1,7 @@
+{% extends '@KnpMenu/menu.html.twig' %}
 
-    <!-- KnpMenu -->
+{% block not_used %}
+<!-- KnpMenu -->
     <ul>
         <li class="current first">
             <a href="#route_to/homepage">Home</a>
@@ -14,3 +16,4 @@
         </li>
     </ul>
     <!-- /knpmenu -->
+{% endblock %}
