--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -5,11 +5,14 @@
     <style>
         .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
         .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+        .menu li {list-style-type: none; display: inline}
     </style>
 
     <div class="example-wrapper">
 
-        {{ knp_menu_render('main') }}
+        <div class="menu">
+            {{ knp_menu_render('main') }}
+        </div>
 
         {% block wrapper '' %}
 
