--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -5,7 +5,10 @@
     <style>
         .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
         .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-        .menu li {list-style-type: none; display: inline}
+        .doc_menu { position: fixed; bottom: 2em }
+        li { list-style-type: none; display: inline }
+        a { text-decoration: none }
+        .doc_menu .validated { color: green }
     </style>
 
     <div class="example-wrapper">
@@ -15,6 +18,11 @@
         </div>
 
         {% block wrapper '' %}
+
+        <div class="doc_menu">
+            {% set menu_doc = knp_menu_get('doc', [], {include_homepage: false}) %}
+            {{ knp_menu_render(menu_doc) }}
+        </div>
 
     </div>
 
