--- a/templates/all/index.html.twig
+++ b/templates/all/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'layout.html.twig' %}
-{% set myvar = "<div>it's a good day today</div>" %}
+{% set myvar = "<div>it's</div>" %}
 {% set myvar2 = "<div>exact</div>" %}
 
 {% block title %}Hello {{ controller_name }}!{% endblock %}
@@ -21,11 +21,4 @@
 
     {% block body_content '' %}
 
-{% endblock %}
-
-{% block bon '' %}
-
-{% block test %}
-    {{ block('bon') }}
-    {{ block('test', 'base.html.twig') }}
 {% endblock %}
