--- a/templates/misc/index.html.twig
+++ b/templates/misc/index.html.twig
@@ -2,19 +2,34 @@
 
 {% block wrapper %}
 
-    {{ parent() }}
+    {#{ parent() }#}
+    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    {% if myvar is defined %}
+    {% if data is defined %}
+        {{ dump(data) }}
+    {% endif %}
+
+    {#% if myvar is defined %}
         <p>
             1.{{ myvar|raw~myvar2 }}-
             2.{{ myvar|raw|upper }}-
-            3.{{ myvar|upper|raw }}- {# raw: need to be the last one to not escaping values #}
+            3.{{ myvar|upper|lower|raw }}- {# raw: need to be the last one to not escaping values # }
+
+            Route: {{ app.request.attributes.get('_route') }}
         </p>
-    {% endif %}
+    {% endif %#}
 
     <p>
-        Route: {{ app.request.attributes.get('_route') }}
+        Form: {{ form(form) }}
+        <br/>
+        FormBuilder: {{ form(formBuilder) }}
     </p>
 
 {% endblock %}
 
+{% block bon '' %}
+
+{% block test %}
+    {{ block('bon') }}
+    {{ block('test', 'base.html.twig') }}
+{% endblock %}
