--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -3,17 +3,18 @@
 {% block body %}
 
     <style>
+        a { text-decoration: none }
         .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
         .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-        .doc_menu { position: fixed; bottom: 2em }
-        li { list-style-type: none; display: inline }
-        a { text-decoration: none }
+        .top_menu li { list-style-type: none; display: inline }
+        .doc_menu { position: fixed; bottom: 2em; right: 2em }
+        .doc_menu li { list-style-type: none; display: block }
         .doc_menu .validated { color: green }
     </style>
 
     <div class="example-wrapper">
 
-        <div class="menu">
+        <div class="top_menu">
             {{ knp_menu_render('main') }}
         </div>
 
