--- a/templates/form/index.html.twig
+++ b/templates/form/index.html.twig
@@ -7,9 +7,21 @@
         {{ dump(data) }}
     {% endif %}
 
+    <script>
+        $(document).ready(function() {
+            // you may need to change this code if you are not using Bootstrap Datepicker
+            $('.js-datepicker').datepicker({
+                format: 'yyyy-mm-dd'
+            });
+        });
+    </script>
+
     <p>
-        Form: 
-            {{ form_start(form, {'action': path('app_application_form_index'), 'method': 'GET'}) }}
+        Form: {# debug: 'attr': {'novalidate': 'novalidate'} #}
+            {{ form_start(form, {
+                    'action': path('app_application_form_index'), 
+                    'method': 'GET',
+            }) }}
                 {{ form_errors(form) }}
                 {#{ form_label(form) }#}
                 {{ form_widget(form) }}
