form listeners wip

--- a/templates/form/form.html.twig
+++ b/templates/form/form.html.twig
@@ -9,8 +9,8 @@
 {# MANDATORY TO OVERRIDE BLOCKS_PREFIXES #}
 {#% form_theme form _self %#}
 {% form_theme form with [
-    _self,
-    'form/custom_range_theme.html.twig'
+    'form/custom_range_theme.html.twig',
+    _self
 ] %}
 {# -mandatory #}
 
