clear template name

--- a/templates/basics/form_form.html.twig
+++ b/templates/basics/form_form.html.twig
@@ -9,7 +9,7 @@
 {# MANDATORY TO OVERRIDE BLOCKS_PREFIXES #}
 {#% form_theme form _self %#}
 {% form_theme form with [
-    'form/custom_range_theme.html.twig',
+    'basics/form_custom_range_theme.html.twig',
     _self
 ] %}
 {# -mandatory #}
@@ -63,7 +63,7 @@
         <p>
         {# debug: 'attr': {'novalidate': 'novalidate'} #}
             {{ form_start(form, {
-                    'action': path('app_application_form_form'), 
+                    'action': path('app_application_basics_form_form'), 
                     'method': 'GET',
             }) }}
                 {% if form is rootform %}
