--- a/templates/basics/formbuild.html.twig
+++ b/templates/basics/formbuild.html.twig
@@ -1,4 +1,4 @@
-{% extends 'all/index.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {# this form theme will be applied only to the form of this template #}
 {% form_theme formBuilder with ['foundation_5_layout.html.twig', _self] only %} {# only disable other themes #}
