--- a/templates/basics/form.html.twig
+++ b/templates/basics/form.html.twig
@@ -48,8 +48,25 @@
 {% block customrangeblockprefix_help %} {# block_prefix => special_field_prefix #}
     {#{ form_widget(formBuilder, {'attr': {'v-model': 'color', '@focus': 'open'}}) }#}
     {# ... more custom code here ... #}
+    
     <em>-customrange-theme-</em>
+    
 {% endblock %}
+
+{% block _user_custom_file_widget %}
+    <{{ element|default('div') }} class="custom-file">
+        {%- set type = type|default('file') -%}
+        {{- block('form_widget_simple') -}}
+        {%- set label_attr = label_attr|merge({ class: (label_attr.class|default('') ~ ' custom-file-label')|trim }) -%}
+
+        <label for="{{ form.vars.id }}" {% with { attr: label_attr } %}{{ block('attributes') }}{% endwith %}>
+            <img width=30 height=30 src="{{ image_file_fromext }}" style="float:left"/>
+            {%- if attr.placeholder is defined and attr.placeholder is not none -%}
+                {{- translation_domain is same as(false) ? attr.placeholder : attr.placeholder|trans({}, translation_domain) -}}
+            {%- endif -%}
+        </label>
+    </{{ element|default('div') }}>
+{% endblock _user_custom_file_widget %}
 
 {% block wrapper %}
 
