--- a/templates/security/security.html.twig
+++ b/templates/security/security.html.twig
@@ -14,6 +14,6 @@
     {% set user0 = app.request.server.get('query_user') %}
     {{ app.request.server.get('query_user') }}
 
-    <a href="{{ path('app_my_route', {'user': '0', 'pass': '1'}) }}">Login</a>
+    <a href="{{ path('app_secure_route', {'user': 'john', 'pass': 'dely@9'}) }}">Login</a>
 
 {% endblock %}
